automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,30 @@
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--  <head>-->
+<!--    <title>Sinatra MVC</title>-->
+<!--  </head>-->
+
+<!--  <body>-->
+<!--    <h1>Index</h1>-->
+<!--    <p> I love programming </p>-->
+<!--  </body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sinatra MVC</title>
+    <meta charset = "UTD-8">
+   <link rel ="stylesheet" href = "css/style.css"#this tag links css to html
+    <title>Fortune Teller</title>
   </head>
-
   <body>
-    <h1>Index</h1>
-    <p> I love programming </p>
+    <h1>Do You Want to Know Your Fortune?</h1>
+    <h3>What is your name?</h3>
+  <form method = POST>
+<input type = "text" name = "user">
+<br>                                       <!line break>-->
+<input type="submit" value ="GET YOUR FORTUNE">
+</form>
   </body>
 </html>
